# GraphAgent

./: .env.example  README.md  debug.py  langgraph.json  mcp_servers.json  mcp_servers_example.json  pyproject.toml
config/: acp_config.yaml  audit.yaml  rbac.yaml  session_config.yaml  subagents.yaml
docs/: 1.LLM模块设计.md  10.人机协作功能设计.md  11.Skill系统设计.md  12.MCP协议支持设计.md  13.安全体系设计.md  14.SubAgent DAG并行执行设计.md  15.上下文工程设计.md  16.流式响应设计方案.md  17.Web UI流式交互增强设计.md  18.记忆系统设计.md  19.会话进程隔离设计.md  2.工具模块设计.md  3.消息系统设计.md  3.记忆系统设计.md  4.Agent编排模块设计.md  5.可观测性系统设计.md  6.多轮对话系统设计.md  7.ACP协议层设计.md  8.会话中断与恢复机制设计.md  9.Hook机制设计.md  9.用户澄清与交互式提问机制设计.md
docs/applications/: GitHub MCP服务器设计.md  文本转PPT功能设计.md
mcp_servers/: github_server.py
prompts/guard/: intent_analysis.txt  plan_review.txt  result_review.txt
prompts/plan/: plan_generation.txt  result_synthesis.txt  task_dispatch.txt
prompts/skills/: chat.md  command-execution.md  file-management.md  general-purpose.md  json-processing.md  pptx-generation.md  web-fetch.md
prompts/subagent/: calc_agent.txt  cmd_agent.txt  file_agent.txt  general_agent.txt  json_agent.txt  time_agent.txt  web_agent.txt
skills/repo-deep-dive/: SKILL.md
src/graph_agent/: graph.py  state.py
src/graph_agent/acp/: __init__.py  checkpoint.py  client.py  protocol.py  server.py  session_manager.py  streaming_callback.py
src/graph_agent/hook/: __init__.py  base.py  executor.py  registry.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py  test_mcp_server.py
web_ui/: index.html
(+84 files in other folders)
