[project]
name = "graph-agent"
version = "0.2.0"
description = "基于 LangGraph 的多 Agent 编排框架，支持三层编排、Skill 系统、MCP 协议、人机协作"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.10",
    "pytest>=8.3.5",
    "ruff>=0.8.0",
]

[tool.uv.build-backend]
module-name = "graph_agent"
source-include = ["langgraph.json", ".env.example", "Makefile", "tests/**"]
